--- a/.env
+++ b/.env
@@ -28,5 +28,5 @@ APP_SECRET=fb2cc43fff7dba868110c4bcaeee1e62
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/gsbsymf?serverVersion=5.7"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/MissionGSBsymfony?serverVersion=mariadb-10.4.11"
 ###< doctrine/doctrine-bundle ###
