--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -3,6 +3,10 @@ security:
         App\Entity\User:
             algorithm: auto
 
+    role_hierarchy:
+        ROLE_USER: ROLE_USER #visiteur
+        ROLE_ADMIN: ROLE_ADMIN #comptable
+
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
         # used to reload user from session & other features (e.g. switch_user)
